--- a/api/core/package.json
+++ b/api/core/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "fastify-template-api",
+  "name": "core",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "build": "npx tsc -p tsconfig.json",
+    "start": "npx tsc -p tsconfig.json && node dist/src/index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/aws-lambda": "^3.2.0",
+    "@h4ad/serverless-adapter": "^2.16.0",
     "fastify": "^4.13.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.13.0",
+    "typescript": "^4.9.5"
   }
 }
