--- a/api/core/package.json
+++ b/api/core/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc -p tsconfig.json",
-    "start": "npx tsc -p tsconfig.json && node dist/index.js"
+    "start": "npx tsc -p tsconfig.json && node dist/server.js"
   },
   "keywords": [],
   "author": "",
